<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aptmini.jreacs.connexus.Search">

    <EditText android:id="@+id/search_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_message" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_thing"
        android:onClick="search"
        />
    <TextView
        android:id="@+id/search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:text="@string/search_numbers" />

</LinearLayout>
